Rework how the gpodder client receives and passes along credentials to other request classes to avoid having to make the consumer keep track of the user name

--- a/GPodder.NET/GPodder.NET.csproj
+++ b/GPodder.NET/GPodder.NET.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
 
